# text_summariser

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  gitlab-ci.yml  main.py  main_old.py  pyproject.toml  requirements-docker.txt  requirements.txt  setup.cfg
.github/workflows/: devops-github.yml
docker/: draft_Dockerfile  working_Dockerfile_1_jupyter
notebooks/: Ner.ipynb  T5_summariser.ipynb
output/: results_2022-05-03-10-17-15.xlsx  results_2022-05-03-15-26-08.csv
src/: control.py  extract_text.py  find_entities.py  get_models.py  gitlab-ci.yml  input.py  json_to_text.py  main.py  output.py  summarise_text.py
tests/: test_summarise_text.py  test_test.py
text_data/: Bill of rights.txt  Consitution of the United States of America.txt  Declaration of independence.txt  Give Me Liberty Or Give Me Death.txt  JFKs Inaugural Address.txt  Lincolns Gettysburg Address.txt  Lincolns Second Inaugural Address-AWynne.txt  Lincolns first address.txt  Mayflower compact.txt  cycling_article.txt
