[metadata]
name = text_analyser
version = 0.0.1
author = Anthony Wynne
license = Proprietary
author_email = a.wynne@svgc.com
description = Takes in a text file and outputs its attributes
long_description = file: README.md
long_description_content_type = text/markdown
url = # TODO Add Gitlab URL
project_urls =
    Bug Tracker = # TODO add Gitlab URL /issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# TODO add packages
python_requires ==3.9
install_requires =
    ipykernel==6.4.1
    numpy==1.20.3
    nltk==3.6.5
    packaging==21.0
    pandas==1.3.4
    pytest==6.2.4
    pytest-cov==3.0.0
    pytorch==1.11.0
    python-decouple==3.6
    sentencepiece==0.1.96
    transformers==4.6.1
    tqdm==4.62.3
    requests==2.26.0
    SQLAlchemy==1.4.22
    urllib3==1.26.7

[options.packages.find]
where = src

[options.package_data]
# src/package/config = *.ini