[metadata]
name = text_summariser
version = 0.0.1
author = Anthony Wynne
license = MIT
author_email = Anthony Wynne <12174019+ant358@users.noreply.github.com>
description = Takes in a text file and outputs its summary
long_description = file: README.md
long_description_content_type = text/markdown
url = # TODO Add Gitlab URL
project_urls =
    Bug Tracker = # TODO add Gitlab URL /issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# TODO add packages
python_requires ==3.9
install_requires =
    ipykernel==6.4.1
    flake8==4.0.1
    numpy==1.20.3
    nltk==3.6.5
    packaging==21.0
    pandas==1.3.4
    pytest==6.2.4
    pytest-cov==3.0.0
    pytorch==1.11.0
    python-decouple==3.6
    sentencepiece==0.1.96
    transformers==4.48.0
    tqdm==4.66.3
    requests==2.26.0
    SQLAlchemy==1.4.22
    urllib3==1.26.7
    textract==1.6.5

[options.packages.find]
where = src

[options.package_data]
# src/package/config = *.ini